# simple-parallel-analyzer

./: CMakeLists.txt  README.md
.github/workflows/: build.yml
src/: SimpleParallelAnalyzer.cpp  SimpleParallelAnalyzer.h  SimpleParallelAnalyzerResults.cpp  SimpleParallelAnalyzerResults.h  SimpleParallelAnalyzerSettings.cpp  SimpleParallelAnalyzerSettings.h  SimpleParallelSimulationDataGenerator.cpp  SimpleParallelSimulationDataGenerator.h
